fix word wrapping in help columns

--- a/jekyll/assets/css/style.css
+++ b/jekyll/assets/css/style.css
@@ -558,6 +558,7 @@ div.toprule {
     padding: 5px 15px;
     min-width: 10em;
     width: auto;
+    white-space: nowrap;
 }
 
 div.irssisyntax {
